--- a/web/index.html
+++ b/web/index.html
@@ -18,7 +18,7 @@
 
 <!-- Load all javascript -->
 <script src="http://maps.google.com/maps/api/js?sensor=false"></script>
-<script src="js/SanMap.min.js"></script>
+<script src="js/SanMap.js"></script>
 <script>
 	/*
 	 * Define the map types we will be using.
@@ -28,7 +28,7 @@
 	 * The default value for tileSize is 512.
 	 */
 	 
-    var mapType = new SanMapType(0, 5, function (zoom, x, y) {
+    var mapType = new SanMapType(1, 3, function (zoom, x, y) {
         return x == -1 && y == -1 
 		? "tiles/map.outer.png" 
 		: "tiles/Altis-UltraHigh." + zoom + "." + x + "." + y + ".png";//Where the tiles are located
